# rika

./: README.md
api/: .env.template  Makefile  config.py  main.py  models.py  pyproject.toml  utils.py
api/chatbot/: __init__.py  config.py  dependancies.py  main.py  models.py  schema.py  state.py  utils.py
api/chatbot/routers/: conversation.py
