[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.6",
    "jinja2>=3.1.4",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "langgraph-checkpoint-postgres>=2.0.7",
    "loguru>=0.7.2",
    "prometheus-client>=0.21.1",
    "win32-setctime>=1.1.0",
]
