[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.6",
    "jinja2>=3.1.4",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.11",
    "langgraph>=0.2.56",
    "langgraph-checkpoint-postgres>=2.0.7",
    "loguru>=0.7.2",
    "prometheus-client>=0.21.1",
    "win32-setctime>=1.1.0",
    "psycopg>=3.2.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "uvloop>=0.21.0",
    "websockets>=14.1",
]
